# 404jumper

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE
.cargo/: config.toml
src/: game.rs  main.rs  menu.rs
wasm/: 404jumper.js  404jumper.js.br
