[package]
name = "bevy_404jumper"
version = "0.1.0"
edition = "2024"

[features]
default = ["dynamic_linking"]
dynamic_linking = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.17.2", features = ["dynamic_linking"] }
rand = "0.9.2"

[profile.dev]
opt-level = 1
cargo-features = ["dynamic_linking"]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
